hphp/hack/test/typecheck/call_lvalue.php.exp
File "call_lvalue.php", line 23, characters 3-11:
You cannot use this syntax on the left-hand side of an assignment. (Parsing[1002])
File "call_lvalue.php", line 24, characters 3-11:
You cannot use this syntax on the left-hand side of an assignment. (Parsing[1002])
File "call_lvalue.php", line 25, characters 12-20:
You cannot use this syntax on the left-hand side of an assignment. (Parsing[1002])
File "call_lvalue.php", line 28, characters 20-28:
You cannot use this syntax as the iterator variable in a `foreach` loop. (Parsing[1002])
